content + alignment fix

--- a/src/components/transition2/moreinfo/moreinfo.css
+++ b/src/components/transition2/moreinfo/moreinfo.css
@@ -1,6 +1,6 @@
 .morecontent{
     margin:10vh;
-    margin-top:0vh;
+    margin-top:10vh;
     padding-top:2vh;
     margin-left:5vw;
     margin-bottom:0;
